tests/agl/rejections/type/discarded_non_unit_function_body.agl
def effect() -> unit =
  1
  ()
effect()
